--- a/todo.txt
+++ b/todo.txt
@@ -11,3 +11,4 @@
 - Implement getartistinfo2
 - SQL injection in search
 - Speed up artist first-letter code
+- Artists with different capitalisations
